# resolve.works

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  nginx.conf  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  svelte.config.js
.github/workflows/: build.yml  container.yml
accounts/: forms.py  models.py  wagtail_hooks.py
accounts/migrations/: 0001_initial.py  0002_user_phone_user_profile_image_workexperience.py  0003_remove_user_profile_image.py  0004_convert_workexperience_to_orderable.py  0005_alter_user_phone.py
articles/: apps.py  embeddings.py  models.py  signals.py  urls.py  views.py
articles/migrations/: 0001_initial.py  0002_alter_articlepage_body.py  0003_add_embedding_visualization.py  0004_alter_articlepage_embedding_visualization.py
embeddings/: apps.py  embeddings.py  models.py  signals.py  urls.py  views.py
home/: blocks.py  models.py
home/migrations/: 0001_initial.py  0002_alter_homepage_body.py  0003_move_footer_to_business_settings.py  0004_add_registration_note.py  0005_add_contact_settings.py  0006_rename_telephone_to_phone.py  0007_alter_businesssettings_phone.py  0008_convert_tagline_to_richtextfield.py  0009_alter_homepage_body.py  0010_alter_homepage_body_footersettings.py  0010_homepage_embedding_visualization.py  0011_remove_footer_heading.py  (+1 more)
resolve/: fields.py  urls.py
scripts/: generate_embeddings.py
src/: app.html
src/lib/: articles.js  (+3 more)
static/: embeddings.json  robots.txt  sitemap.xml  styles.css  visualization.js
tools/: generate-embeddings.mjs  generate-og.mjs
(+56 files in other folders)
