[project]
name = "resolve-works"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2,<5.3",
    "django-browser-reload>=1.21.0",
    "wagtail>=7.2",
    "wagtail-markdown>=0.13.0",
    "sentence-transformers>=3.3.0",
    "umap-learn>=0.5.7",
    "nltk>=3.9.0",
    "gunicorn>=23.0.0",
    "psycopg[binary]>=3.2.0",
]

[project.optional-dependencies]
cpu = ["torch>=2.9.0"]
cu128 = ["torch>=2.9.0"]

[dependency-groups]
dev = [
    "pre-commit>=4.0.0",
]

[tool.uv]
conflicts = [
    [
        { extra = "cpu" },
        { extra = "cu128" },
    ],
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cu128", extra = "cu128" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.ruff]
line-length = 88
target-version = "py313"
